--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "sass": "^1.43.4"
   },
   "dependencies": {
-    "@brightlayer-ui/colors": "^3.0.1",
-    "@fontsource/open-sans": "^4.5.2"
+    "@brightlayer-ui/colors": "^3.0.1"
   }
 }
