--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
     "content_scripts": [
         {
             "matches": ["https://*/*"],
-            "css": ["styles/acronym-plugin-tooltip.css"]
+            "css": ["styles/tooltip.css"]
         }
     ],
     "action": {
