--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acryn-plugin",
+  "name": "eaton-hackathon-chrome-plugin",
   "version": "1.0.0",
   "description": "A Chrome plugin that allows quick access to Eaton's many acronyms.",
   "main": "background.js",
@@ -22,9 +22,9 @@
   "author": "Evan McLaughlin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/emclaug2/ACRYN-plugin/issues"
+    "url": "https://github.com/emclaug2/eaton-hackathon-chrome-plugin/issues"
   },
-  "homepage": "https://github.com/emclaug2/ACRYN-plugin#readme",
+  "homepage": "https://github.com/emclaug2/eaton-hackathon-chrome-plugin#readme",
   "devDependencies": {
     "@brightlayer-ui/prettier-config": "^1.0.3",
     "prettier": "^2.4.1",
